d558f25aa2416a4ace9440be1a32aa8ff2596b6b Fix: Bootstrap 5 right fixed column misalignment
Sync to source repo @d558f25aa2416a4ace9440be1a32aa8ff2596b6b

--- a/css/fixedColumns.bootstrap5.css
+++ b/css/fixedColumns.bootstrap5.css
@@ -68,6 +68,7 @@ table.dataTable th {
 }
 
 div.dataTables_scrollBody thead tr,
-div.DTFC_LeftBodyLiner thead tr {
+div.DTFC_LeftBodyLiner thead tr,
+div.DTFC_RightBodyLiner thead tr {
   height: 0px !important;
 }
